--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Equila';
+    src: url('./assets/fonts/Equila.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+.Equila {
+    font-family: 'Equila', sans-serif;
+}
